pshyc profile and sign in/log in UI improve